--- a/index.css
+++ b/index.css
@@ -1,31 +1,42 @@
-h1 {
-    color: rgb(107, 12, 145);
-  }
+body {
+  font-family:"Trebuchet MS", Segoe, sans-serif;
+  margin:40px;
+  font-size: 1.2em;
+}
+div:first-child {
+  margin-bottom: 20px;
+}
+button {
+  padding: 10px;
+}
+#box {
+  width: 200px;
+  height: 38px;
+  margin-left: 20px;
+}
 
-  .newFont {
-    font-family: 'Lucida Console';font-size: 12px;
-    font-size:      30px;
-    font-weight:    bold;
-    color:  rgb(107, 12, 145);
-  }
-  
-  .oneMovie {
-    color:  rgb(107, 12, 145);
-  }
-  
-  .center {
-    display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 15%;
-  }
+@-webkit-keyframes downarrow {
+  0% { -webkit-transform: translateY(0); opacity: 0.4 }
+  50% { -webkit-transform: translateY(0.4em); opacity: 0.9 }
+}
 
-  /* latin */
-@font-face {
-    font-family: 'Nova Flat';
-    font-style: normal;
-    font-weight: 200;
-    src: url(https://fonts.gstatic.com/s/novaflat/v24/QdVUSTc-JgqpytEbVeb0viFl.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-  }
-
+.arrow {
+  border-color:transparent;
+  border-style:solid;
+  border-width:0 2em;
+  display:block;
+  height:0;
+  margin: 1px; 
+  opacity:0.9;
+  text-indent:-9999px;
+  transform-origin: 10%;
+  width: 1px;;
+}
+.up {
+  -webkit-animation: uparrow 0.6s infinite alternate ease-in-out;
+  border-bottom:2em solid #00b6f1;
+}
+.down {
+  -webkit-animation: downarrow 0.6s infinite alternate ease-in-out;
+  border-top:2em solid #00b6f1;
+}
