--- a/site.css
+++ b/site.css
@@ -16,10 +16,46 @@ button {
 }
 
 .ui-page {
-  background: #74a4c07e !important;
+  background: #4c8db37e !important;
 }
 
 .ui-header {
-  background: #6995b173;
+  background: #4c8eb873;
 }
 
+body {
+  background-color: #fff1f1;
+}
+
+h1 {
+  color: #a74f4f;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 40px;
+  border: 10px solid #721111;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+li {
+  color: #b87070;
+  text-align: center;
+  padding: 5px 10px;
+  background-color: #fff1f1;
+}
+
+
+button{
+  background-color: #6cafdb;
+  color: white;
+  border-radius: 20px;
+  padding: 15px 32px;
+  font-size: 20px;
+}
+
+#menu li { padding: 0px; }
+#menu li a { margin: 0px; display: block; width: 100%; height: 100%; }
